modificacion chekbok y radio

--- a/include/calculadora/index.html
+++ b/include/calculadora/index.html
@@ -86,50 +86,45 @@
                 <div class="multisteps-form__content">
                   <div class="form-row mt-4">
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="fmultisteps-form__input" type="checkbox" id="btn_marca" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <input class="fmultisteps-form__input" type="checkbox" id="btn_tecnologicos" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
 
-                        <label class="form-check-label" for="flexCheckDefault" id="lb_diseno_marca">Diseño de Marca</label><i class="fa fa-question-circle" id="help_diseno_marca"></i>
+                        <label class="form-check-label" for="flexCheckDefault">Recursos tecnológicos</label>
                     </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                      <input class="multisteps-form__input" type="checkbox" value="" id="ecommerce" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
-                        <label class="form-check-label" for="flexCheckDefault" id="lb_ecommerce">E-commerce</label><i class="fa fa-question-circle" id="help_ecommerce"></i>
+                      <input class="multisteps-form__input" type="checkbox" value="" id="btn_ejecucion" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <label class="form-check-label" for="flexCheckDefault">Recursos de Ejecución</label>
                     </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                      <input class="multisteps-form__input" type="checkbox" value="" id="sac" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
-                        <label class="form-check-label" for="flexCheckDefault" id="lb_sac">SAC</label><i class="fa fa-question-circle" id="help_sac"></i>
+                      <input class="multisteps-form__input" type="checkbox" value="" id="btn_estrategicos" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <label class="form-check-label" for="flexCheckDefault">Recursos de Estratégicos</label>
                     </div>
                   </div>
                   <div class="form-row mt-4">
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="digital" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
-                        <label class="form-check-label" for="flexCheckDefault" id="lb_marketing">Marketing Digital</label><i class="fa fa-question-circle" id="help_marketing"></i>
+                        <label class="form-check-label" for="flexCheckDefault" id="lb_diseno_marca">Diseño de Marca</label><i class="fa fa-question-circle" id="help_diseno_marca"></i>
                     </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="call" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_call">Click To Call</label><i class="fa fa-question-circle" id="help_call"></i>
                     </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="ejecutivo" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_ejecutivos">Ejecutivos</label><i class="fa fa-question-circle" id="help_ejecutivos"></i>
                     </div>
                   </div>
                   <div class="form-row mt-4">
 
-                                        <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-
+                    <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                      <label class="form-check-label" for="flexCheckDefault" id="lb_marketing">Marketing Digital</label><i class="fa fa-question-circle" id="help_marketing"></i>
                     </div>
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="office" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_office">Back Office</label><i class="fa fa-question-circle" id="help_office"></i>
                     </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="whatsapp" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_whatsapp">Whatsapp</label><i class="fa fa-question-circle" id="help_whatsapp"></i>
                     </div>
 
-                    
-</div>
+                  </div>
+
                     <div class="form-row mt-4">
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
@@ -137,15 +132,25 @@
                     </div>
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="rrss" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_rrss">RRSS</label><i class="fa fa-question-circle" id="help_rrss"></i>
                     </div> 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="consultoria" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_consultoria">Consultoria</label><i class="fa fa-question-circle" id="help_consultoria"></i>
                     </div>
 
                   </div>
+
+                  <div class="form-row mt-4">
+                    <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                    </div>
+                    <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                        <label class="form-check-label" for="flexCheckDefault" id="lb_ecommerce">E-Commerce</label><i class="fa fa-question-circle" id="help_ecommerce"></i>
+                    </div>
+                    <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                        <label class="form-check-label" for="flexCheckDefault" id="lb_sac">SAC</label><i class="fa fa-question-circle" id="help_sac"></i>
+                    </div>
+                  </div>
+
                   <div class="button-row d-flex mt-4">
                     <button class="btn btn-primary js-btn-prev" type="button" title="Prev">Anterior</button>
                     <button class="btn btn-primary ml-auto js-btn-next" type="button" title="Next">Siguiente</button>
@@ -163,16 +168,16 @@
                   <div class="form-row mt-4">
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                      <input class="multisteps-form__input" type="checkbox" id="g-rrss" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                      <input class="multisteps-form__input" type="checkbox" id="g-rrss" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-" disabled>
                       <label class="form-check-label" for="flexCheckDefault" id="lb_grrss">Gestión de RRSS</label><i class="fa fa-question-circle" id="help_grrss"></i>
                     </div>
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="ivr" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="ivr" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-" disabled>
                         <label class="form-check-label" for="flexCheckDefault" id="lb_ivr">IVR</label><i class="fa fa-question-circle" id="help_ivr"></i>
                     </div> 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="bpo" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="bpo" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-" disabled>
                         <label class="form-check-label" for="flexCheckDefault" id="lb_bpo">BPO</label><i class="fa fa-question-circle" id="help_bpo"></i>
                     </div>
 
@@ -185,11 +190,11 @@
                     </div>
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="voximplant" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="voximplant" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-" disabled>
                         <label class="form-check-label" for="flexCheckDefault" id="lb_vox">Voximplant</label><i class="fa fa-question-circle" id="help_vox"></i>
                     </div> 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="contact_center" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="contact_center" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-" disabled>
                         <label class="form-check-label" for="flexCheckDefault" id="lb_center">Contact Center</label><i class="fa fa-question-circle" id="help_center"></i>
                     </div>
 
@@ -202,11 +207,11 @@
                     </div>
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="c-ecommerce" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="c-ecommerce" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-" disabled>
                         <label class="form-check-label" for="flexCheckDefault" id="lb_gecommerce">E-commerce</label><i class="fa fa-question-circle" id="help_gecommerce"></i>
                     </div> 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="customer_experience" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="customer_experience" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-" disabled>
                         <label class="form-check-label" for="flexCheckDefault" id="lb_gcustomer">Customer Experience</label><i class="fa fa-question-circle" id="help_gcustomer"></i>
                     </div>
 
@@ -219,11 +224,11 @@
                     </div>
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="crm" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="crm" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-" disabled>
                         <label class="form-check-label" for="flexCheckDefault" id="lb_gcrm">CRM</label><i class="fa fa-question-circle" id="help_gcrm"></i>
                     </div> 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="c-consultoria" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="c-consultoria" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-" disabled>
                         <label class="form-check-label" for="flexCheckDefault" id="lb_gconsultoria">Cunsultoria</label><i class="fa fa-question-circle" id="help_gconsultoria"></i>
                     </div>
 
