--- a/include/calculadora/index.html
+++ b/include/calculadora/index.html
@@ -84,46 +84,73 @@
               <div class="multisteps-form__panel shadow p-4 rounded bg-white" data-animation="scaleIn">
                 <h3 class="multisteps-form__title">Configura Tu Solución</h3>
                 <div class="multisteps-form__content">
+
                   <div class="form-row mt-4">
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <input class="fmultisteps-form__input" type="checkbox" id="btn_tecnologicos" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <input class="fmultisteps-form__input" type="checkbox" id="btn_tecnologicos" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
 
                         <label class="form-check-label" for="flexCheckDefault">Recursos tecnológicos</label>
                     </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                      <input class="multisteps-form__input" type="checkbox" value="" id="btn_ejecucion" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                      <input class="multisteps-form__input" type="checkbox" value="" id="btn_ejecucion" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault">Recursos de Ejecución</label>
                     </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                      <input class="multisteps-form__input" type="checkbox" value="" id="btn_estrategicos" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                      <input class="multisteps-form__input" type="checkbox" value="" id="btn_estrategicos" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault">Recursos de Estratégicos</label>
                     </div>
                   </div>
+
                   <div class="form-row mt-4">
+
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                      <div id="div_s-marca">
+                        <input class="fmultisteps-form__input" type="checkbox" id="btn_marca" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_diseno_marca">Diseño de Marca</label><i class="fa fa-question-circle" id="help_diseno_marca"></i>
                     </div>
+
+                  </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                      <div id="div_s-call">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_call" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_call">Click To Call</label><i class="fa fa-question-circle" id="help_call"></i>
                     </div>
+
+                  </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                      <div id="div_s-ejecutivos">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_ejecutivos">Ejecutivos</label><i class="fa fa-question-circle" id="help_ejecutivos"></i>
                     </div>
                   </div>
-                  <div class="form-row mt-4">
-
-                    <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                      <label class="form-check-label" for="flexCheckDefault" id="lb_marketing">Marketing Digital</label><i class="fa fa-question-circle" id="help_marketing"></i>
-                    </div>
-
-                    <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <label class="form-check-label" for="flexCheckDefault" id="lb_office">Back Office</label><i class="fa fa-question-circle" id="help_office"></i>
-                    </div>
-                    <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                        <label class="form-check-label" for="flexCheckDefault" id="lb_whatsapp">Whatsapp</label><i class="fa fa-question-circle" id="help_whatsapp"></i>
-                    </div>
 
                   </div>
+
+                  <div class="form-row mt-4">
+
+                  <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                      <div id="div_s-marketing">
+                        <input class="fmultisteps-form__input" type="checkbox" id="btn_marketing" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                      <label class="form-check-label" for="flexCheckDefault" id="lb_marketing">Marketing Digital</label><i class="fa fa-question-circle" id="help_marketing"></i>
+                    </div>
+                  </div>
+
+                  <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                    <div id="div_s-office">                 
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_office" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
+                        <label class="form-check-label" for="flexCheckDefault" id="lb_office">Back Office</label><i class="fa fa-question-circle" id="help_office"></i>
+                    </div>
+                  </div>
+
+                    <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                      <div id="div_s-whatsapp">
+                          <input class="multisteps-form__input" type="checkbox" value="" id="btn_whatsapp" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
+                        <label class="form-check-label" for="flexCheckDefault" id="lb_whatsapp">Whatsapp</label><i class="fa fa-question-circle" id="help_whatsapp"></i>
+                    </div>
+                  </div>
+
+                  </div>
+
+                  
 
                     <div class="form-row mt-4">
 
@@ -132,11 +159,18 @@
                     </div>
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                      <div id="div_s-rrss">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_rrss" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_rrss">RRSS</label><i class="fa fa-question-circle" id="help_rrss"></i>
                     </div> 
+                  </div>
+
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                      <div id="div_s-consultoria">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_consultoria" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_consultoria">Consultoria</label><i class="fa fa-question-circle" id="help_consultoria"></i>
                     </div>
+                  </div>
 
                   </div>
 
@@ -144,11 +178,17 @@
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
                     </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                      <div id="div_s-ecommerce">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_ecommerce" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_ecommerce">E-Commerce</label><i class="fa fa-question-circle" id="help_ecommerce"></i>
                     </div>
+                  </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                      <div id="div_s-sac">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_sac" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_sac">SAC</label><i class="fa fa-question-circle" id="help_sac"></i>
                     </div>
+                  </div>
                   </div>
 
                   <div class="button-row d-flex mt-4">
