queda listo seleccion soluciones grafico y js

--- a/include/calculadora/index.html
+++ b/include/calculadora/index.html
@@ -82,22 +82,22 @@
               <!-- Inicio segundo paso -->
 
               <div class="multisteps-form__panel shadow p-4 rounded bg-white" data-animation="scaleIn">
-                <h3 class="multisteps-form__title">Configura Tu Solución</h3>
+                <h3 class="multisteps-form__title" style="text-align: center;">Configura Tu Solución</h3>
                 <div class="multisteps-form__content">
 
                   <div class="form-row mt-4">
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
                         <input class="fmultisteps-form__input" type="checkbox" id="btn_tecnologicos" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
 
-                        <label class="form-check-label" for="flexCheckDefault">Recursos tecnológicos</label>
+                        <label class="form-check-label" for="flexCheckDefault"><strong>Recursos Tecnológicos</strong></label>
                     </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
                       <input class="multisteps-form__input" type="checkbox" value="" id="btn_ejecucion" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
-                        <label class="form-check-label" for="flexCheckDefault">Recursos de Ejecución</label>
+                        <label class="form-check-label" for="flexCheckDefault"><strong>Recursos de Ejecución</strong></label>
                     </div>
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
                       <input class="multisteps-form__input" type="checkbox" value="" id="btn_estrategicos" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
-                        <label class="form-check-label" for="flexCheckDefault">Recursos de Estratégicos</label>
+                        <label class="form-check-label" for="flexCheckDefault"><strong>Recursos de Estratégicos</strong></label>
                     </div>
                   </div>
 
@@ -112,14 +112,14 @@
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
                       <div id="div_s-call">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_call" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_call" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_call">Click To Call</label><i class="fa fa-question-circle" id="help_call"></i>
                     </div>
                   </div>
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
                       <div id="div_s-ejecutivos">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_ejecutivos" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_ejecutivos" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_ejecutivos">Ejecutivos</label><i class="fa fa-question-circle" id="help_ejecutivos"></i>
                     </div>
                   </div>
@@ -135,17 +135,17 @@
                     </div>
                   </div>
 
-         <!--        <div class="col-12 col-sm-4 mt-4 mt-sm-0">
-                    <div id="div_s-office">                 
-                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_office" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
-                        <label class="form-check-label" for="flexCheckDefault" id="lb_office">Back Office</label><i class="fa fa-question-circle" id="help_office"></i>
-                    </div>
-                  </div> -->
-
-                    <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                  <div class="col-12 col-sm-4 mt-4 mt-sm-0">
                       <div id="div_s-whatsapp">
-                          <input class="multisteps-form__input" type="checkbox" value="" id="btn_whatsapp" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
+                          <input class="multisteps-form__input" type="checkbox" value="" id="btn_whatsapp" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_whatsapp">Whatsapp</label><i class="fa fa-question-circle" id="help_whatsapp"></i>
+                    </div>
+                  </div>
+
+                  <div class="col-12 col-sm-4 mt-4 mt-sm-0">
+                    <div id="div_s-office">                 
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_office" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
+                        <label class="form-check-label" for="flexCheckDefault" id="lb_office">Back Office</label><i class="fa fa-question-circle" id="help_office"></i>
                     </div>
                   </div>
 
@@ -161,14 +161,14 @@
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
                       <div id="div_s-rrss">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_rrss" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_rrss" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_rrss">RRSS</label><i class="fa fa-question-circle" id="help_rrss"></i>
                       </div> 
                     </div>
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
                       <div id="div_s-consultoria">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_consultoria" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_consultoria" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_consultoria">Consultoria</label><i class="fa fa-question-circle" id="help_consultoria"></i>
                       </div>
                   </div>
@@ -182,14 +182,14 @@
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
                       <div id="div_s-ecommerce">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_ecommerce" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_ecommerce" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_ecommerce">E-Commerce</label><i class="fa fa-question-circle" id="help_ecommerce"></i>
                       </div>
                     </div>
 
                     <div class="col-12 col-sm-4 mt-4 mt-sm-0">
                       <div id="div_s-sac">
-                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_sac" data-toggle="toggle" data-onstyle="warning" data-on="+" data-off="-">
+                        <input class="multisteps-form__input" type="checkbox" value="" id="btn_sac" data-toggle="toggle" data-onstyle="success" data-on="+" data-off="-">
                         <label class="form-check-label" for="flexCheckDefault" id="lb_sac">SAC</label><i class="fa fa-question-circle" id="help_sac"></i>
                       </div>
                   </div>
@@ -208,7 +208,7 @@
               <!-- Inicio tercer paso -->
 
               <div class="multisteps-form__panel shadow p-4 rounded bg-white" data-animation="scaleIn">
-                <h3 class="multisteps-form__title">Adquiere Capacidades</h3>
+                <h3 class="multisteps-form__title" style="text-align: center;">Adquiere Capacidades</h3>
                 <div class="multisteps-form__content">
                   <div class="form-row mt-4">
 
